--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/RockolaSO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-java-5.1.30-bin.jar=C:\\Users\\Mayron  Corrales\\Documents\\NetBeansProjects\\PruebaRemota\\src\\pruebaremota\\mysql-connector-java-5.1.30-bin.jar
+file.reference.mysql-connector-java-5.1.30-bin.jar-1=C:\\Users\\Danicormu\\Documents\\mysql-connector-java-5.1.30-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.30-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.30-bin.jar}:\
+    ${file.reference.mysql-connector-java-5.1.30-bin.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
