--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/RockolaSO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.basicplayer3.0.jar=C:\\Users\\Danicormu\\Documents\\basicplayer3.0.jar
+file.reference.jl1.0.1.jar=C:\\Users\\Danicormu\\Documents\\jl1.0.1.jar
+file.reference.jlgui3.0.jar=C:\\Users\\Danicormu\\Documents\\jlgui3.0.jar
 file.reference.mysql-connector-java-5.1.30-bin.jar=C:\\Users\\Mayron  Corrales\\Documents\\NetBeansProjects\\PruebaRemota\\src\\pruebaremota\\mysql-connector-java-5.1.30-bin.jar
 file.reference.mysql-connector-java-5.1.30-bin.jar-1=C:\\Users\\Danicormu\\Documents\\mysql-connector-java-5.1.30-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.30-bin.jar}:\
-    ${file.reference.mysql-connector-java-5.1.30-bin.jar-1}
+    ${file.reference.mysql-connector-java-5.1.30-bin.jar-1}:\
+    ${file.reference.jlgui3.0.jar}:\
+    ${file.reference.jl1.0.1.jar}:\
+    ${file.reference.basicplayer3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
