--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,6 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Danicormu\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+file.reference.basicplayer3.0.jar=C:\\Users\\Mayron  Corrales\\Desktop\\ProyectoOperativos\\basicplayer3.0.jar
+file.reference.jl1.0.1.jar=C:\\Users\\Mayron  Corrales\\Desktop\\ProyectoOperativos\\jl1.0.1.jar
+file.reference.jlgui3.0.jar=C:\\Users\\Mayron  Corrales\\Desktop\\ProyectoOperativos\\jlgui3.0.jar
+file.reference.mysql-connector-java-5.1.30-bin.jar-1=C:\\Users\\Mayron  Corrales\\Documents\\NetBeansProjects\\mysql-connector-java-gpl-5.1.30.msi
+user.properties.file=C:\\Users\\Mayron  Corrales\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
